--- a/tutorial/scenario.1/1-list/pipeline.yml
+++ b/tutorial/scenario.1/1-list/pipeline.yml
@@ -7,19 +7,76 @@ resources:
       uri: https://github.com/ds-hellofresh/concourse-tutorial.git
 
 jobs:
-  - name: Test
+  - name: test
     plan:
     - get: super-app
       trigger: true
-    - task: Testing
+    - task: linting
       config:
         platform: linux
         image_resource:
           type: docker-image
-          source: {repository: ubuntu}
+          source: {repository: golang}
         run:
-          path: ls
-          args: ["-l"]
+          path: ./test_fmt.sh
+          dir: super-app/scripts
 
         inputs:
           - name: super-app
+    - task: unit
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source: {repository: golang}
+        run:
+          path: sh
+          args:
+          - -exc
+          - |
+            ./scripts/go_deps.sh
+            ./scripts/test_unit.sh
+          dir: super-app/
+        inputs:
+          - name: super-app
+  - name: building
+    plan:
+    - get: super-app
+      trigger: true
+      passed: [ "test" ]
+    - task: build
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source: {repository: golang}
+        run:
+          path: sh
+          args:
+          - -exc
+          - |
+            ./scripts/go_deps.sh
+            ./scripts/go_build.sh linux 0.0.1
+            mv super_*_linux_amd64 ../artifact
+          dir: super-app/
+        inputs:
+          - name: super-app
+        outputs:
+          - name: artifact
+    - task: integeration test
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source: {repository: golang}
+        run:
+          path: sh
+          args:
+          - -exc
+          - |
+            ./artifact/super_*_linux_amd64&
+            ./super-app/scripts/test_integeration.sh  http://127.0.0.1:8080
+            kill -9 `pgrep super_`
+        inputs:
+          - name: super-app
+          - name: artifact
