--- a/tutorial/scenario.1/1-list/pipeline.yml
+++ b/tutorial/scenario.1/1-list/pipeline.yml
@@ -11,34 +11,35 @@ jobs:
     plan:
     - get: super-app
       trigger: true
-    - task: linting
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source: {repository: golang}
-        run:
-          path: ./test_fmt.sh
-          dir: super-app/scripts
+    - aggregate:
+      - task: linting
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source: {repository: golang}
+          run:
+            path: ./test_fmt.sh
+            dir: super-app/scripts
 
-        inputs:
-          - name: super-app
-    - task: unit
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source: {repository: golang}
-        run:
-          path: sh
-          args:
-          - -exc
-          - |
-            ./scripts/go_deps.sh
-            ./scripts/test_unit.sh
-          dir: super-app/
-        inputs:
-          - name: super-app
+          inputs:
+            - name: super-app
+      - task: unit
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source: {repository: golang}
+          run:
+            path: sh
+            args:
+            - -exc
+            - |
+              ./scripts/go_deps.sh
+              ./scripts/test_unit.sh
+            dir: super-app/
+          inputs:
+            - name: super-app
   - name: building
     plan:
     - get: super-app
@@ -75,7 +76,7 @@ jobs:
           - -exc
           - |
             ./artifact/super_*_linux_amd64&
-            ./super-app/scripts/test_integeration.sh  http://127.0.0.1:8080
+            ./super-app/scripts/test_integeration.sh http://127.0.0.1:8080
             kill -9 `pgrep super_`
         inputs:
           - name: super-app
