--- a/tutorial/scenario.1/1-list/pipeline.yml
+++ b/tutorial/scenario.1/1-list/pipeline.yml
@@ -5,7 +5,6 @@ resources:
     branch: master
     source:
       uri: https://github.com/ds-hellofresh/concourse-tutorial.git
-
 jobs:
   - name: test
     plan:
@@ -13,71 +12,15 @@ jobs:
       trigger: true
     - aggregate:
       - task: linting
-        config:
-          platform: linux
-          image_resource:
-            type: docker-image
-            source: {repository: golang}
-          run:
-            path: ./test_fmt.sh
-            dir: super-app/scripts
-
-          inputs:
-            - name: super-app
+        file: tutorial/scenario.1/1-list/tasks/linting.yml
       - task: unit
-        config:
-          platform: linux
-          image_resource:
-            type: docker-image
-            source: {repository: golang}
-          run:
-            path: sh
-            args:
-            - -exc
-            - |
-              ./scripts/go_deps.sh
-              ./scripts/test_unit.sh
-            dir: super-app/
-          inputs:
-            - name: super-app
+        file: tutorial/scenario.1/1-list/tasks/unit.yml
   - name: building
     plan:
     - get: super-app
       trigger: true
       passed: [ "test" ]
     - task: build
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source: {repository: golang}
-        run:
-          path: sh
-          args:
-          - -exc
-          - |
-            ./scripts/go_deps.sh
-            ./scripts/go_build.sh linux 0.0.1
-            mv super_*_linux_amd64 ../artifact
-          dir: super-app/
-        inputs:
-          - name: super-app
-        outputs:
-          - name: artifact
+      file: tutorial/scenario.1/1-list/tasks/build.yml
     - task: integeration test
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source: {repository: golang}
-        run:
-          path: sh
-          args:
-          - -exc
-          - |
-            ./artifact/super_*_linux_amd64&
-            ./super-app/scripts/test_integeration.sh http://127.0.0.1:8080
-            kill -9 `pgrep super_`
-        inputs:
-          - name: super-app
-          - name: artifact
+      file: tutorial/scenario.1/1-list/tasks/int-test.yml
